syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts";
package chat;

service Chat {
  rpc Listen(ListenRequest) returns (stream Message);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc AckMessage(AckMessageRequest) returns (AckMessageResponse);
}

message ListenRequest {
  int32 user_id = 1;
}

enum MessageType {
  unknown = 0;
  plain_text = 1;
}

message PlainTextData {
  string text = 1;
}

message Message {
  int32 message_id = 1;
  int32 sender_id = 2;
  int32 receiver_id = 3;
  MessageType type = 4;
  oneof data {
    PlainTextData plain_text_data = 5;
  }
}

message SendMessageRequest {
  Message message = 1;
}

message SendMessageResponse {
}

message AckMessageRequest {
  int32 sender_id = 1;
  int32 message_id = 2;
}

message AckMessageResponse {
}